--- a/requirements.txt
+++ b/requirements.txt
@@ -1,116 +1,19 @@
-altgraph==0.17.3
-appdirs==1.4.4
-Appium-Python-Client==3.0.0
-assertpy==1.1
-async-generator==1.10
-asyncio==3.4.3
-attrs==23.1.0
-Automat==22.10.0
-blinker==1.6.2
-bs4==0.0.2
-certifi==2023.7.22
-cffi==1.16.0
-chardet==4.0.0
-charset-normalizer==2.0.12
-click==8.1.7
-config==0.5.1
-constantly==23.10.4
-cryptography==41.0.7
-cssselect==1.2.0
-distlib==0.3.8
-enum34==1.1.10
+certifi==2023.11.17
+charset-normalizer==3.3.2
 et-xmlfile==1.1.0
-exceptiongroup==1.1.1
-execnet==2.0.2
-fake-useragent==1.4.0
-Faker==19.6.1
-filelock==3.13.1
-Flask==2.3.3
-Flask-Cors==4.0.0
-greenlet==2.0.1
-h11==0.14.0
-hyperlink==21.0.0
-idna==3.2
-importlib-metadata==7.0.1
-incremental==22.10.0
-iniconfig==2.0.0
-itemadapter==0.8.0
-itemloaders==1.1.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-jmespath==1.0.1
-jsoncodable==0.1.7
-jsonpickle==3.0.2
-k-selenium-cookies==0.0.4
-kproxy==0.0.1
-logger==1.4
-lxml==4.9.3
-macholib==1.16.2
-MarkupSafe==2.1.3
-namedlist==1.8
-noraise==0.0.16
-numpy==1.24.2
+Faker==22.5.1
+greenlet==3.0.3
+idna==3.6
+numpy==1.26.3
 openpyxl==3.1.2
-outcome==1.2.0
-packaging==23.1
-pandas==1.5.3
-parse==1.20.0
-parsel==1.8.1
-pipenv==2022.12.19
-platformdirs==2.6.2
-playwright==1.31.1
-pluggy==1.0.0
-polling2==0.5.0
-Protego==0.3.0
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pycparser==2.21
-PyDispatcher==2.0.7
-pyee==9.0.4
-pyinstaller==5.13.0
-pyinstaller-hooks-contrib==2023.7
-pymssql==2.2.7
-pyOpenSSL==23.3.0
-pyppeteer==1.0.2
-pyquery==2.0.0
-PySocks==1.7.1
-pytest==7.4.4
-pytest-html==4.0.2
-pytest-json==0.4.0
-pytest-metadata==3.0.0
-pytest-xdist==3.3.1
+pandas==2.2.0
+playwright==1.41.1
+pyarrow==15.0.0
+pyee==11.0.1
 python-dateutil==2.8.2
-python-dotenv==1.0.0
-pytz==2022.7.1
-queuelib==1.6.2
-requests==2.26.0
-requests-file==1.5.1
-requests-html==0.10.0
-Scrapy==2.11.0
-selenium==4.16.0
-selenium-browser==0.0.15
-selenium-chrome==0.0.29
-selenium-chromedriver==1.3
-service-identity==24.1.0
+pytz==2023.4
+requests==2.31.0
 six==1.16.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.5
-SQLAlchemy==2.0.5.post1
-tldextract==3.6.0
-tqdm==4.66.1
-trio==0.24.0
-trio-websocket==0.11.1
-Twisted==22.10.0
 typing_extensions==4.9.0
-undetected-chromedriver==3.5.3
-urllib3==1.26.18
-virtualenv==20.25.0
-virtualenv-clone==0.5.7
-w3lib==2.1.2
-websockets==10.4
-Werkzeug==2.3.7
-wsproto==1.2.0
-xpath-utils==0.0.3
-zipp==3.17.0
-zope.interface==6.1
+tzdata==2023.4
+urllib3==2.1.0
